# oxide-code

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  RELEASING.md  cliff.toml  cspell.json  flake.nix  package.json  pnpm-lock.yaml  pyproject.toml
crates/oxide-code/: Cargo.toml
crates/oxide-code/src/: agent.rs  client.rs  config.rs  file_tracker.rs  main.rs  message.rs  model.rs  permission.rs  prompt.rs  session.rs  slash.rs  tool.rs  tui.rs  util.rs
crates/oxide-code/src/agent/: compact_boundary.rs  compaction.rs  event.rs  pending_calls.rs
crates/oxide-code/src/client/: anthropic.rs  billing.rs
crates/oxide-code/src/client/anthropic/: betas.rs  billing.rs  completion.rs  identity.rs  sse.rs  testing.rs  wire.rs
crates/oxide-code/src/config/: file.rs  oauth.rs
crates/oxide-code/src/model/: pricing.rs
crates/oxide-code/src/permission/: rule.rs
crates/oxide-code/src/prompt/: claude_md.rs  environment.rs  instructions.rs  sections.rs
crates/oxide-code/src/session/: actor.rs  chain.rs  display.rs  entry.rs  handle.rs  history.rs  list_view.rs  manager.rs  path.rs  resolver.rs  sanitize.rs  state.rs  store.rs  title_generator.rs  writer.rs
crates/oxide-code/src/session/handle/: testing.rs
crates/oxide-code/src/session/snapshots/: ox__session__actor__tests__run_full_turn_produces_byte_compatible_jsonl.snap
crates/oxide-code/src/slash/: clear.rs  compact.rs  config.rs  confirm.rs  context.rs  delete.rs  diff.rs  effort.rs  effort_slider.rs  format.rs  help.rs  init.rs  matcher.rs  model.rs  parser.rs  picker.rs  registry.rs  rename.rs  resume.rs  status.rs  status_modal.rs  theme.rs
crates/oxide-code/src/tool/: bash.rs  edit.rs  glob.rs  grep.rs  read.rs  tracker.rs  write.rs
crates/oxide-code/src/tui/: app.rs  component.rs  components.rs  cursor.rs  event.rs  glyphs.rs  markdown.rs  modal.rs  pending_calls.rs  selection.rs  terminal.rs  theme.rs  wrap.rs
crates/oxide-code/src/tui/components/: chat.rs  input.rs  status.rs  welcome.rs
crates/oxide-code/src/tui/components/chat/: blocks.rs  mod.rs  tests.rs
crates/oxide-code/src/tui/components/input/: popup.rs
crates/oxide-code/src/tui/components/snapshots/: ox__tui__components__chat__tests__render_empty_shows_welcome_screen.snap  ox__tui__components__chat__tests__render_error_entry_is_styled_distinctly.snap  ox__tui__components__chat__tests__render_history_with_resumed_thinking_block.snap  ox__tui__components__chat__tests__render_tool_call_followed_by_result.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_error_uses_error_border_color.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_identical_sides_emits_no_body.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_identical_sides_emits_no_change_marker.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_over_budget_truncates_both_sides.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_result.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_trims_identical_boundary_lines.snap  ox__tui__components__chat__tests__render_tool_call_with_edit_diff_wraps_long_lines_under_bar.snap  ox__tui__components__chat__tests__render_tool_result_overflow_shows_line_count.snap  ox__tui__components__chat__tests__render_user_and_assistant_interleaved.snap  ox__tui__components__input__tests__render_disabled_dims_style_and_hides_cursor_row.snap  ox__tui__components__input__tests__render_empty_buffer_shows_only_prompt_marker_and_borders.snap  ox__tui__components__input__tests__render_empty_shows_placeholder.snap  ox__tui__components__input__tests__render_empty_shows_placeholder_and_hint_line.snap  ox__tui__components__input__tests__render_long_line_wraps_and_engages_scroll_offset.snap  ox__tui__components__input__tests__render_multiline_grows_textarea_region.snap  ox__tui__components__input__tests__render_with_text_shows_typed_content.snap  ox__tui__components__status__tests__render_cancelling_shows_spinner_and_label.snap  ox__tui__components__status__tests__render_compacting_shows_spinner_and_status_label.snap  ox__tui__components__status__tests__render_exit_armed_shows_static_hint_without_spinner.snap  ox__tui__components__status__tests__render_idle_with_title_shows_marketing_model_name_and_cwd.snap  ox__tui__components__status__tests__render_idle_with_title_shows_model_title_and_cwd.snap  ox__tui__components__status__tests__render_idle_without_title_leaves_slot_unused.snap  ox__tui__components__status__tests__render_narrow_width_drops_cwd_and_title_slots.snap  ox__tui__components__status__tests__render_narrow_width_preserves_model_and_run_state.snap  ox__tui__components__status__tests__render_narrow_width_truncates_cwd_and_title.snap  ox__tui__components__status__tests__render_streaming_shows_spinner_and_status_label.snap  ox__tui__components__status__tests__render_tool_running_status.snap  ox__tui__components__welcome__tests__paint_60_col_minimum_full_layout_still_includes_starters.snap  (+3 more)
crates/oxide-code/src/tui/components/status/: line.rs
crates/oxide-code/src/tui/markdown/: highlight.rs  render.rs
crates/oxide-code/src/tui/modal/: approval.rs  kv_overview.rs  list_picker.rs  searchable_list.rs
crates/oxide-code/src/tui/snapshots/: ox__tui__app__tests__draw_frame_lays_out_status_chat_and_input_in_order.snap  ox__tui__app__tests__draw_frame_lays_out_status_chat_and_input_in_order.snap.new  ox__tui__app__tests__draw_frame_narrow_width_still_renders_all_three_panels.snap  ox__tui__app__tests__draw_frame_preview_panel_renders_queued_prompts_and_overflow_tag.snap  ox__tui__app__tests__draw_frame_streaming_shows_spinner_in_status_bar.snap  ox__tui__app__tests__draw_frame_with_conversation_and_tool_call.snap
crates/oxide-code/src/tui/theme/: builtin.rs  color.rs  loader.rs
crates/oxide-code/src/util/: env.rs  fs.rs  git.rs  lock.rs  log.rs  path.rs  text.rs  time.rs  tls.rs
crates/oxide-code/themes/: frappe.toml  latte.toml  macchiato.toml  material.toml  mocha.toml
(+97 files in other folders)
