[workspace]
members = ["crates/oxide-code"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["Hakula <i@hakula.xyz>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
indoc = "2"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "io-std",
  "io-util",
  "macros",
  "signal",
  "sync",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "fmt",
  "env-filter",
  "ansi",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
