[workspace]
members = ["crates/oxide-code"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.91"
authors = ["Hakula <i@hakula.xyz>"]
license = "MIT"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "6"
futures = "0.3"
globset = "0.4"
ignore = "0.4"
indoc = "2"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "stream",
] }
security-framework = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
time = { version = "0.3", features = ["local-offset"] }
tokio = { version = "1", features = [
  "io-std",
  "io-util",
  "macros",
  "process",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
] }
tracing = "0.1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
  "ansi",
  "env-filter",
  "fmt",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
