[package]
name = "oxide-code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ox"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dirs.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xxhash-rust.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
indoc.workspace = true
tempfile.workspace = true
