[package]
name = "oxide-code"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ox"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
dirs.workspace = true
futures.workspace = true
globset.workspace = true
ignore.workspace = true
indoc.workspace = true
platform-info.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
ratatui-textarea.workspace = true
regex.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
syntect.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
unicode-width.workspace = true
uuid.workspace = true
xxhash-rust.workspace = true

[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework.workspace = true

[dev-dependencies]
insta.workspace = true
temp-env.workspace = true
tempfile.workspace = true
wiremock.workspace = true
